--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -76,61 +76,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#Making a Move\n",
     "def make_move(state, position):\n",
-    "    #if(position == (len(state) - 2)):\n",
-    "            #return state #return the same value if its length of the state \n",
+    "    str_len = len(state)\n",
+    "    result_str = state\n",
+    "    position_str = \"\"\n",
+    "    final_str = \"\"\n",
+    "    for i in range(0, len(state)):\n",
+    "        if(state[i] == \"_\"):\n",
+    "            position_str += str(i)\n",
     "    \n",
-    "    count = 0  #seat index variable intially zero\n",
-    "    new_str=\"\"\n",
-    "    move_str = \"\"  \n",
+    "    free_seat_A = int(position_str[0])\n",
+    "    free_seat_B = int(position_str[1])\n",
     "    \n",
-    "    #lets consider pair seat as (AB)\n",
-    "    seat1 = position+1  # pair seat-A\n",
-    "    seat2 = position+2  # pair seat-B\n",
+    "    swap_seat_A = str(state[position])\n",
+    "    swap_seat_B = str(state[position+1])\n",
     "    \n",
-    "    for i in state:\n",
+    "    count = 0\n",
+    "    ctr = position\n",
+    "    for x in state:\n",
+    "        if (count >= position and count <= position+1):\n",
+    "            final_str +=\"_\"\n",
+    "        elif(x != \"_\"):\n",
+    "            final_str += x\n",
+    "        elif(x == \"_\"):\n",
+    "                final_str += str(state[ctr])\n",
+    "                ctr+=1\n",
     "        count +=1\n",
-    "        if(i != \"_\"):\n",
-    "            if(count >= seat1 and count <= seat2):\n",
-    "                new_str +=\"_\"\n",
-    "                move_str += i\n",
-    "            else:\n",
-    "                new_str +=i\n",
-    "            #end of for loop\n",
+    "\n",
     "    \n",
-    "    new_str += move_str        \n",
-    "    return new_str\n",
-    "   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'TATATATA__'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#2.2.1 Make Initial State\n",
-    "make_initial_state(4)"
+    "    return final_str\n",
+    "               \n",
+    "    "
    ]
   },
   {
@@ -143,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "'012345678901234567'"
+       "'TATATATA__'"
       ]
      },
      "execution_count": 7,
@@ -152,8 +134,8 @@
     }
    ],
    "source": [
-    "#2.2.2 Make a Position String\n",
-    "make_position_string(18)"
+    "#2.2.1 Make Initial State\n",
+    "make_initial_state(4)"
    ]
   },
   {
@@ -166,7 +148,7 @@
     {
      "data": {
       "text/plain": [
-       "8"
+       "'012345678901234567'"
       ]
      },
      "execution_count": 8,
@@ -175,9 +157,8 @@
     }
    ],
    "source": [
-    "#2.2.3 Number of Differences\n",
-    "state = make_initial_state(4)\n",
-    "num_diffs(state)"
+    "#2.2.2 Make a Position String\n",
+    "make_position_string(18)"
    ]
   },
   {
@@ -199,6 +180,30 @@
     }
    ],
    "source": [
+    "#2.2.3 Number of Differences\n",
+    "state = make_initial_state(4)\n",
+    "num_diffs(state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "#2.2.4 Position of Blanks\n",
     "state = make_initial_state(4)\n",
     "position_of_blanks(state)"
@@ -206,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -217,7 +222,7 @@
        "'T__ATATAAT'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,6 +232,38 @@
     "state = make_initial_state(4)\n",
     "make_move(state, 1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'TAT__ATAAT'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state = make_move(state, 1)\n",
+    "make_move(state, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
