--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -76,36 +76,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "#Making a Move\n",
     "def make_move(state, position):\n",
-    "    str_len = len(state)\n",
-    "    result_str = state\n",
-    "    position_str = \"\"\n",
-    "    final_str = \"\"\n",
+    "    str_len = len(state)  #state string lenght\n",
+    "    position_str = \"\"     #Initializing  as string\n",
+    "    final_str = \"\"        #Initializing  as string\n",
     "    for i in range(0, len(state)):\n",
     "        if(state[i] == \"_\"):\n",
-    "            position_str += str(i)\n",
+    "            position_str += str(i)       # Initially finding the free seat \"_ _\" position\n",
     "    \n",
-    "    free_seat_A = int(position_str[0])\n",
-    "    free_seat_B = int(position_str[1])\n",
+    "    free_seat_A = int(position_str[0])   #Converting the String into Int (Typecasting)\n",
+    "    free_seat_B = int(position_str[1])   #Converting the String into Int (Typecasting)\n",
     "    \n",
-    "    swap_seat_A = str(state[position])\n",
-    "    swap_seat_B = str(state[position+1])\n",
+    "    swap_seat_A = str(state[position])   #copying the member \"string\" to be moved to new location\n",
+    "    swap_seat_B = str(state[position+1]) #copying the member \"string\" to be moved to new location\n",
     "    \n",
-    "    count = 0\n",
-    "    ctr = position\n",
+    "    count = 0        #counter variable to find the current position\n",
+    "    ctr = position        \n",
     "    for x in state:\n",
     "        if (count >= position and count <= position+1):\n",
-    "            final_str +=\"_\"\n",
+    "            final_str +=\"_\"         #Inserting the free seat in the given position\n",
+    "            \n",
     "        elif(x != \"_\"):\n",
-    "            final_str += x\n",
+    "            final_str += x          #Adding existing seat format                          \n",
     "        elif(x == \"_\"):\n",
-    "                final_str += str(state[ctr])\n",
+    "                final_str += str(state[ctr])  #swaping the old free seat with memeber\n",
     "                ctr+=1\n",
     "        count +=1\n",
     "\n",
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +129,7 @@
        "'TATATATA__'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -151,7 +152,7 @@
        "'012345678901234567'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -174,7 +175,7 @@
        "8"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -198,7 +199,7 @@
        "8"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -222,7 +223,7 @@
        "'T__ATATAAT'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -246,7 +247,7 @@
        "'TAT__ATAAT'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
